Apply heritrix-3.0.1 source changes.
Change the code to the codebase as supplied by
commons-httpclient-3.0.1-sources.jar. This means all changes aside from those
in package org.apache.commons.httpclient.heritrix have been changed to the
original 3.0.1 version.

It appears that the heritrix 1.14.1 changes were to the commons-httpclient
3.0.1 and not 3.1.